feat: redesign archive search for v0.3.0
